--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>AI Box</title>
   </head>
   <body class="h-full">
     <div id="app" class="bg-white dark:bg-black dark:text-white"></div>
